--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "start": "next dev",
+    "net-start": "next dev -H {ipv4}",
     "build": "next build",
     "prod-start": "next start"
   },
